# eterna_labs

./: .gitignore  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  simulate_load.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Demo.tsx  Pipeline.tsx  RealBackendQueue.tsx  api.ts  index.css
matchmaker/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
matchmaker/db/: schema.sql
matchmaker/src/: balance.rs  config.rs  db.rs  engine.rs  lib.rs  main.rs  metrics.rs  models.rs  pool.rs  relaxation.rs
