[package]
name = "matchmaker"
version = "0.1.0"
edition = "2021"
description = "High-performance 5v5 competitive matchmaking engine"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "mysql", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "test-util"] }

[[bin]]
name = "matchmaker"
path = "src/main.rs"
